ScriptEngine-HPC 0.x.y
======================

Features
--------
- Add stop_after_submit argument to hpc.slurm.sbatch


ScriptEngine-HPC 0.4.1
======================

Fixes
-----
- Fix missing context argument in module task


ScriptEngine-HPC 0.4.0
======================

Features
--------
- Add support for modules (Environment Modules and Lmod)
- Add documentation (Sphinx for ReadTheDocs)
- Update Github workflows


ScriptEngine-HPC 0.3.1
======================

Fixes
-----
- Fix #6: support complex hetjob_specs


ScriptEngine-HPC 0.3.0
======================

Features
--------
- Fix #5: Support SLURM heterogeneous jobs


ScriptEngine-HPC 0.2.1
======================

Fixes
-----
- Fix #4: package-not-found error


ScriptEngine-HPC 0.2.0
======================

Features
--------
- Fix #1: Make 'scripts' optional, use original arguments by default
- Fix #3: Rename package and modules


Fixes
-----


Internal changes
----------------
- Clean up and refactor Sbatch task (#2)
- Adapt to SE entry_points task loading
- Add Github workflow for PyPI publishing