@@ -4,6 +4,7 @@ ScriptEngine-HPC 0.x.y
 Features
 --------
 - Add stop_after_submit argument to hpc.slurm.sbatch
+- Add set_jobid argument to hpc.slurm.sbatch
 
 
 ScriptEngine-HPC 0.4.1
